Updated with dashboard
Dashboard functionality

--- a/finance.ipynb
+++ b/finance.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -74,8 +74,7 @@
     "stock_data.info\n",
     "\n",
     "#get all names of columns\n",
-    "stock_data.info.keys()\n",
-    "\n"
+    "stock_data.info.keys()"
    ]
   },
   {
